# streamline-rust-sdk

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  deny.toml  docker-compose.test.yml  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  integration.yml  release.yml
examples/: README.md  agent_memory.rs  circuit_breaker.rs  consumer.rs  producer.rs  query_usage.rs  schema_registry.rs  security.rs
src/: admin.rs  circuit_breaker.rs  client.rs  config.rs  connection.rs  consumer.rs  error.rs  lib.rs  metrics.rs  moonshot.rs  producer.rs  query.rs  schema.rs  telemetry.rs  traced.rs  validation.rs  verifier.rs
testcontainers/: Cargo.toml  README.md
testcontainers/src/: lib.rs
tests/: config_test.rs  conformance.rs  consumer_test.rs  error_test.rs  headers_test.rs  producer_test.rs
