[package]
# Release workflow configured for automated publishing
name = "streamline-client"
version = "0.2.0"
edition = "2021"
authors = ["Streamline Team"]
description = "Native Rust client for Streamline streaming platform"
license = "Apache-2.0"
repository = "https://github.com/streamlinelabs/streamline-rust-sdk"
documentation = "https://docs.rs/streamline-client"
keywords = ["streaming", "kafka", "messaging", "async"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["tokio-runtime", "schema-registry"]
tokio-runtime = ["tokio/full"]
compression-lz4 = ["lz4_flex"]
compression-zstd = ["zstd"]
compression-snappy = ["snap"]
tls = ["tokio-rustls", "rustls-pemfile", "rustls"]
sasl = ["dep:sha2", "dep:hmac", "dep:pbkdf2", "dep:base64"]
telemetry = ["opentelemetry", "opentelemetry_sdk", "tracing-opentelemetry"]
schema-registry = ["reqwest"]
schema-registry-tls = ["schema-registry", "reqwest/rustls-tls"]
moonshot = ["reqwest", "dep:base64"]
attestation = ["dep:ed25519-dalek", "dep:base64"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["net", "io-util", "sync", "time", "macros"] }

# Kafka protocol
kafka-protocol = "0.17"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Compression (optional)
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }
snap = { version = "1.1", optional = true }

# TLS (optional)
tokio-rustls = { version = "0.25", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
rustls = { version = "0.22", optional = true }

# SASL (optional)
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
pbkdf2 = { version = "0.12", optional = true }
base64 = { version = "0.22", optional = true }

# Attestation verification (optional)
ed25519-dalek = { version = "2.1", optional = true }

# Telemetry (optional)
opentelemetry = { version = "0.22", optional = true }
opentelemetry_sdk = { version = "0.22", optional = true }
tracing-opentelemetry = { version = "0.23", optional = true }

# Utils
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"

# HTTP client (for Schema Registry)
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
wiremock = "0.6"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[[example]]
name = "producer"
path = "examples/producer.rs"

[[example]]
name = "consumer"
path = "examples/consumer.rs"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

